--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -197,7 +197,7 @@
 {\bf Acceso a materiales del curso}: \href{https://ucampus.uoh.cl/uoh/2020/1/ICE3201/1}{\texttt{{\color{red}Pending}}}.
 
 \vspace{5mm}
-{\bf Ayudante de c\'atedra (TA)}: Gonzalo Barr\'ia.\\
+{\bf Ayudante de c\'atedra (TA)}: Gonzalo Barr\'ia (Mg.).\\
 \texttt{e:}\href{mailto:gonzalo.barria@uoh.cl}{\texttt{gonzalo.barria@uoh.cl}}\\
 \texttt{Zoom ID:} 988-891-7227.\\
 {\bf TA Bio}: Gonzalo Barr\'ia es Cientista Pol\'itico (PUC) y Mag\'ister en Ciencia Pol\'itica (PUC).\\
@@ -212,7 +212,7 @@
 {\bf Pre-requisitos}: PENDIENTE.\\
 {\bf SCT}: 6.\\
 {\bf Horas semanales}: C\'atedra (45-60 minutos v\'ia Zoom), Ayudant\'ia  (30-40 minutos v\'ia Zoom). \\
-{\bf Semanas}:  12.\\
+{\bf Semanas}:  12.
 
 
 
