--- a/Tests/Midterm/Midterm_CP_2.tex
+++ b/Tests/Midterm/Midterm_CP_2.tex
@@ -98,21 +98,15 @@
 {\bf Profesor}: H\'ector Bahamonde.\\
 \texttt{e:}\href{mailto:hector.bahamonde@uoh.cl}{\texttt{hector.bahamonde@uoh.cl}}\\
 \texttt{w:}\href{http://www.hectorbahamonde.com}{\texttt{www.hectorbahamonde.com}}\\
-{\bf Curso}: Ciencia Pol\'itica I.\\
+{\bf Curso}: Ciencia Pol\'itica II.\\
 \hspace{-5mm}{\bf Ayudante}: Gonzalo Barr\'ia.
 
 \section*{Instrucciones}
-Este es el temario para el ensayo \emph{midterm}. De las tres preguntas, debes escoger una. Debes escribir tu ensayo con una extensi\'on m\'inima de 1500 palabras (aproximadamente 3 p\'aginas) y una extensi\'on m\'axima de 2000 palabras (aproximadamente 4 p\'aginas). Tu respuesta debe tener formato ensayo: debe ser una an\'alisis cr\'itico de las lecturas. Si te limitas a resumir el texto, tendr\'as una nota deficiente. La cantidad de palabras incluye las citas, pero excluye el t\'itulo y la bibliograf\'ia. {\bf Deber\'as subir tu respuesta a uCampus no antes de las 5 pm (hora de Chile) del martes 11 de agosto de 2020 en la secci\'on \emph{Tareas}}. Tanto el ayudante como el profesor estar\'an disponibles durante horas y d\'ias laborales para responder preguntas. {\bf Los trabajos atrasados tendr\'an la nota m\'inima, sin excepci\'on---si tienes mala conexi\'on de Internet, planifica tu trabajo con mucha anticipaci\'on, y sube tu trabajo lo antes posible}. Revisa tu trabajo al menos dos veces, y preoc\'upate de citar adecuadamente: {\bf el plagio significa nota m\'inima}. \ul{Tu respuesta debe citar cada trabajo nombrado en la pregunta una vez como m\'aximo \emph{y} como m\'inimo (con una extensi\'on m\'axima de una oraci\'on de dos l\'ineas por cita)}. El \'unico tipo de archivo aceptado es un archivo de texto con extensi\'on \texttt{doc} o \texttt{docx}.
+Este es el temario para el ensayo \emph{final}. De las tres preguntas, debes escoger una. Debes escribir tu ensayo con una extensi\'on m\'inima de 1500 palabras (aproximadamente 3 p\'aginas) y una extensi\'on m\'axima de 2000 palabras (aproximadamente 4 p\'aginas). Tu respuesta debe tener formato ensayo: debe ser una an\'alisis cr\'itico de las lecturas. Si te limitas a resumir el texto, tendr\'as una nota deficiente. La cantidad de palabras incluye las citas, pero excluye el t\'itulo y la bibliograf\'ia. {\bf Deber\'as subir tu respuesta a uCampus no antes del plazo estipulado en la misma plataforma en la secci\'on \emph{Tareas}}. Tanto el ayudante como el profesor estar\'an disponibles durante horas y d\'ias laborales para responder preguntas. {\bf Los trabajos atrasados tendr\'an la nota m\'inima, sin excepci\'on---si tienes mala conexi\'on de Internet, planifica tu trabajo con mucha anticipaci\'on, y sube tu trabajo lo antes posible}. Revisa tu trabajo al menos dos veces, y preoc\'upate de citar adecuadamente: {\bf el plagio significa nota m\'inima}. \ul{Tu respuesta debe citar cada trabajo nombrado en la pregunta una vez como m\'aximo \emph{y} como m\'inimo (con una extensi\'on m\'axima de una oraci\'on de dos l\'ineas por cita)}. El \'unico tipo de archivo aceptado es un archivo de texto con extensi\'on \texttt{doc} o \texttt{docx}. Recuerda incluir una seccion ``Bibliograf\'ia'' al final de tu trabajo (esto no cuenta en la cantidad de palabras).
 
 Escoge una pregunta:
 
 \section*{Temario}
-
-\begin{enumerate}
-	\item Pensando en la literatura de democracia, espec\'ificamente en \textcite{Lijphart2012,Schmitter1991,Collier1997}, def\'inela (1 p\'agina m\'aximo). Ahora, y teniendo en cuenta \textcite{Munck2002,Collier1999}, c\'omo debiera ser medida? Adopta una posici\'on y defi\'endela (1 p\'agina m\'aximo). Finalmente, y pensando en el clientelismo \parencite{Kitschelt2000,Auyero2000}, por qu\'e esta pr\'actica convive tan bien con la democracia, manteni\'endose en el tiempo? (desarrolla esta parte en profundidad en el resto de tu ensayo).
-	\item Eval\'ua brevemente las teor\'ias de los or\'igenes de la democracia \parencite{Lipset1959,Przeworski1997,Moore:1966tn,Collier:1999rz,Boix:2003db,Acemoglu:1996rm} (resume cada teor\'ia en dos o tres oraciones como m\'aximo). A la luz de lo expuesto por \textcite{Haggard2012,Ansell:2014ty}, en qu\'e otras cr\'iticas (mencionadas en los textos y en las discusiones en clases/c\'apsulas) podemos pensar? (desarrolla esta parte en profundidad en el resto de tu ensayo).
-	\item Explica brevemente la teor\'ia de \textcite{Downs:1957vg} (media p\'agina). Qu\'e condiciones hacen concluir a \textcite{Downs:1957vg} que los partidos tiendan a converger hacia el centro? Responde en funci\'on de \textcite{Boix:1999tj} (una p\'agina). Ahora, y pensando en los sistemas multi-partidistas y en la discusi\'on sostenida en clases, qu\'e factores podr\'ian causar una desestabilizaci\'on pol\'itica al mezclar multipartidismo con un presidencialismo fuerte? Responde a la luz de \textcite{Lijphart1990,Linz1985,Mainwaring1985} (desarrolla esta parte en profundidad en el resto de tu ensayo).
-\end{enumerate}
 
 
 
