--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -54,7 +54,7 @@
 \usepackage[sc,osf]{mathpazo}
 
 % Set your name here
-\def\name{Ciencia Pol\'itica II - SIGLA PENDIENTE}
+\def\name{Ciencia Pol\'itica II - APU3602}
 
 % Replace this with a link to your CV if you like, or set it empty
 % (as in \def\footerlink{}) to remove the link in the footer:
@@ -114,7 +114,7 @@
   \closein\fid
   \global\let\filetext=\filetext
 \egroup}
-\readfile{/Users/hectorbahamonde/RU/Bibliografia_PoliSci/email.txt}
+\readfile{/Users/hectorbahamonde/Bibliografia_PoliSci/email.txt}
 % email input end
 
 
@@ -130,8 +130,8 @@
 \AtEveryBibitem{\clearfield{month}}
 \AtEveryCitekey{\clearfield{month}}
 
-\addbibresource{/Users/hectorbahamonde/RU/Bibliografia_PoliSci/library.bib} 
-\addbibresource{/Users/hectorbahamonde/RU/Bibliografia_PoliSci/Bahamonde_BibTex2013.bib} 
+\addbibresource{/Users/hectorbahamonde/Bibliografia_PoliSci/library.bib} 
+\addbibresource{/Users/hectorbahamonde/Bibliografia_PoliSci/Bahamonde_BibTex2013.bib} 
 
 % USAGES
 %% use \textcite to cite normal
@@ -191,10 +191,10 @@
 
 
 \vspace{5mm}
-{\bf Hora de c\'atedra}: {\color{red}Pending.}\\
+{\bf Hora de c\'atedra}: Lunes 14:30---16:00. Mi\'ercoles 14:30---16:00.\\
 {\bf Lugar de c\'atedra}: Zoom (no hay clases presenciales este semestre).\\
 
-{\bf Acceso a materiales del curso}: \href{https://ucampus.uoh.cl/uoh/2020/1/ICE3201/1}{\texttt{{\color{red}Pending}}}.
+{\bf Acceso a materiales del curso}: \href{https://ucampus.uoh.cl/uoh/2020/2/APU3602/1/}{\texttt{aqu\'i}}.
 
 \vspace{5mm}
 {\bf Ayudante de c\'atedra (TA)}: Gonzalo Barr\'ia (Mg.).\\
@@ -207,12 +207,12 @@
 
 \vspace{5mm}
 {\bf Carrera}:  Administraci\'on P\'ublica.\\
-{\bf Eje de Formaci\'on}: PENDIENTE.\\
+%{\bf Eje de Formaci\'on}: PENDIENTE.\\
 {\bf Semestre/A\~no}: Sexto Semestre/2020.\\
-{\bf Pre-requisitos}: PENDIENTE.\\
+%{\bf Pre-requisitos}: PENDIENTE.\\
 {\bf SCT}: 6.\\
-{\bf Horas semanales}: C\'atedra (45-60 minutos v\'ia Zoom), Ayudant\'ia  (30-40 minutos v\'ia Zoom). \\
-{\bf Semanas}:  12.
+{\bf Horas semanales}: C\'atedra (45-60 minutos v\'ia Zoom), Ayudant\'ia  (30-40 minutos v\'ia Zoom).
+%{\bf Semanas}:  12.
 
 
 
