--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -482,8 +482,8 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 
 			\item[13.] {\bf Mecanismos Desigualizantes del Capitalismo e Instituciones Coloniales}.
 				\begin{itemize}
-					\item[{\color{red}$\circ$}] Elisa Mariscal and Kenneth L. Sokoloff. 2000. ``Schooling, Suffrage, and the Persistence of Inequality in the Americas, 1800-1945'', en Stephen Harber, Ed. \emph{Political Institutions and Economic Growth in Latin America}. 
-					\item[$\circ$] Thomas Piketty. 2014.  \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Piketty_El_capital.pdf}{``Capital in the Twenty-First Century''}. Fondo de Cultura Econ\'omica. Ch.: ``Introducci\'on''.\phantom{\textcite{Piketty:2015aa}}
+					\item[$\circ$] Elisa Mariscal and Kenneth L. Sokoloff. 2000. ``Schooling, Suffrage, and the Persistence of Inequality in the Americas, 1800-1945'', en Stephen Harber, Ed. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Political_Institutions_Haber.pdf}{\emph{Political Institutions and Economic Growth in Latin America}}.\phantom{\textcite{Haber2000}}
+          \item[$\circ$] Thomas Piketty. 2014.  \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Piketty_El_capital.pdf}{``Capital in the Twenty-First Century''}. Fondo de Cultura Econ\'omica. Ch.: ``Introducci\'on''.\phantom{\textcite{Piketty:2015aa}}
 				\end{itemize}
 
 
