--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -269,7 +269,7 @@ El gran objetivo de este curso, es poder cubrir los grandes temas de la ciencia 
 Este semestre, abordaremos tres unidades. En particular:
 
 \begin{enumerate}
-	\item Formaci\'on del Estado: Guerra, Elites, Impuestos, Riqueza y Justicia.
+	\item Formaci\'on y Capacidad del Estado: Guerra, \'Elites, Impuestos, Riqueza y Justicia.
 	\item Desarrollo Capitalista y La Econom\'ia Pol\'itica de la Formaci\'on del Estado.
 	\item Desigualdad Econ\'omica: ¿Qu\'e Han Hecho o Podr\'ian Hacer los Estados?
 \end{enumerate}
@@ -392,7 +392,7 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
     \end{itemize}
 
 
-	\item {\color{ForestGreen}{\bf \underline{Formaci\'on del Estado: Guerra, Elites, Impuestos, Riqueza y Justicia}}}
+	\item {\color{ForestGreen}{\bf \underline{Formaci\'on y Capacidad del Estado: Guerra, \'Elites, Impuestos, Riqueza y Justicia}}}
 		\begin{itemize}
 			
 			\item[2.] {\bf Formaci\'on del estado: El estado europeo a la luz de la teor\'ia econ\'omica y sociol\'ogica}.
@@ -433,12 +433,29 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 					\item[$\circ$]  Hillel Soifer. 2015. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Soifer.pdf}{\emph{State Building in Latin America}}. Cambridge University Press. Ch. 2.\phantom{\textcite{Soifer2015a}}
 				\end{itemize}
 
-	
-		\item[8.] {\bf ¿Podr\'ia no existir el Estado?}
+			\item[8.] {\bf Capacidad Estatal}.
+				\begin{itemize}
+					\item[$\circ$] Michael Mann. 2008. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Mann_2008.pdf}{``Infrastructural Power Revisited.''} \emph{Studies in Comparative International Development}, 43(3-4): 355---365.\phantom{\textcite{Mann2008a}} 
+					\item[$\circ$]  Florian Hollenbach, Erik Wibbels and Michael Ward. 2013. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Hollenbach_2013.pdf}{``State Building and the Geography of Governance: Evidence From Satellites.''} \emph{Working Paper}.\phantom{\textcite{Hollenbach2013}} 
+				\end{itemize}
+
+
+			\item[9.] {\bf La Pol\'itica de la Capacidad Estatal}.
+				\begin{itemize}
+					\item[$\circ$] Daniel Brinks, Steven Levitsky and Mar\'ia Victoria Murillo. 2020. ``The Political Origins of Institutional Weakness,'' en Daniel Brinks, Steven Levitsky and Mar\'ia Victoria Murillo, Eds. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Brinks_Levitsky_Murillo.pdf}{\emph{The Politics of Institutional Weakness in Latin America}}. Cambridge University Press, Ch. 1.\phantom{\textcite{Brinks2020}}
+					\item[$\circ$] Matthew Amengual and Eduardo Dargent. 2020. ``The Social Determinants of Enforcement: Integrating Politics with Limited State Capacity,'' en Daniel Brinks, Steven Levitsky and Mar\'ia Victoria Murillo, Eds. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Brinks_Levitsky_Murillo.pdf}{\emph{The Politics of Institutional Weakness in Latin America}}. Cambridge University Press, Ch. 7.\phantom{\textcite{Brinks2020}}
+				\end{itemize}
+
+
+
+		\item[10.] {\bf ¿Podr\'ia no existir el Estado?}
 				\begin{itemize}
           \item[$\circ$] Jeffrey Herbst. 2010. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Scott.pdf}{\emph{The Art of Not Being Governed: An Anarchist History of Upland Southeast Asia}}. Yale University Press. Ch. 1.\phantom{\textcite{Scott2010}}
 					\item[$\circ$] Jeffrey Herbst. 2015. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Herbst.pdf}{\emph{States and Power in Africa: Comparative Lessons in Authority and Control}}. Princeton University Press. Ch. 5 (``National Design and the Broadcasting of Power'').\phantom{\textcite{Herbst2015}}
-        \end{itemize}	
+        		\end{itemize}	
+
+
+
 		\end{itemize}
 
 \item[{\color{red}\Pointinghand}] Ensayo midterm. Entra todo lo visto y discutido hasta el momento.
@@ -447,26 +464,26 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 	\item {\color{ForestGreen}{\bf \underline{Desarrollo Capitalista y La Econom\'ia Pol\'itica de la Formaci\'on del Estado}}}
 		\begin{itemize}
 
-			\item[9.] {\bf Or\'igenes del Capitalismo: Libre Mercado, Instituciones Pol\'iticas y Revoluci\'on Industrial}.
+			\item[11.] {\bf Or\'igenes del Capitalismo: Libre Mercado, Instituciones Pol\'iticas y Revoluci\'on Industrial}.
 				\begin{itemize}
 					\item[$\circ$]  Douglass North. 1990. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/North.pdf}{\emph{Institutions, Institutional Change and Economic Performance}}. Cambridge University Press. Pp.: 1---69.\phantom{\textcite{North1990}}
           \item[$\circ$] Cheryl Schonhardt-Bailey. 2006. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Corn_Laws.pdf}{\emph{From the Corn Laws to Free Trade: Interests, Ideas, and Institutions in Historical Perspective}}. The MIT Press. Ch. 1\phantom{\textcite{Schonhardt-Bailey2006}}
         \end{itemize}
 
 
-			\item[10.] {\bf \emph{Property Rights} y Revoluci\'on Industrial: ¿Fu\'e por los Incentivos Individuales?}
+			\item[12.] {\bf \emph{Property Rights} y Revoluci\'on Industrial: ¿Fu\'e por los Incentivos Individuales?}
 				\begin{itemize}
 					\item[$\circ$]  Gregory Clark. 2007. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Clark.pdf}{\emph{A Farewell to Alms: A Brief Economic History of the World}}. Princeton University Press. Ch.: 12.\phantom{\textcite{Clark2007}}
 				\end{itemize}
 
 
-			\item[11.] {\bf Representaci\'on Pol\'itica y \'Elites Econ\'omicas: El Pr\'estamo}.
+			\item[13.] {\bf Representaci\'on Pol\'itica y \'Elites Econ\'omicas: El Pr\'estamo}.
 				\begin{itemize}
           \item[$\circ$]  David Stasavage. 2011. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Stasavage.pdf}{\emph{States of Credit: Size, Power, and the Development of European Polities}}. Princeton University Press. Ch.: 1 (``Introduction'').\phantom{\textcite{Stasavage2011}}
         \end{itemize}
 
 
-      \item[12.] {\bf ¿Son los \emph{Booms} Econ\'omicos Positivos para la Formaci\'on del Estado?: \'Africa y Latinoam\'erica}.
+      \item[14.] {\bf ¿Son los \emph{Booms} Econ\'omicos Positivos para la Formaci\'on del Estado?: \'Africa y Latinoam\'erica}.
         \begin{itemize}
           \item[$\circ$] Ryan Saylor. 2014. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Saylor.pdf}{\emph{State Building in Boom Times: Commodities and Coalitions in Latin America and Africa}}. Oxford University Press. Ch. 1---p. 39.\phantom{\textcite{Saylor:2014aa}}
           
@@ -480,45 +497,53 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 	\item {\color{ForestGreen}{\bf \underline{Desigualdad Econ\'omica: ¿Qu\'e Han Hecho o Podr\'ian Hacer los Estados?}}}
 		\begin{itemize}
 
-			\item[13.] {\bf Mecanismos Desigualizantes del Capitalismo e Instituciones Coloniales}.
+			\item[15.] {\bf Mecanismos Desigualizantes del Capitalismo e Instituciones Coloniales}.
 				\begin{itemize}
 					\item[$\circ$] Elisa Mariscal and Kenneth L. Sokoloff. 2000. ``Schooling, Suffrage, and the Persistence of Inequality in the Americas, 1800-1945'', en Stephen Harber, Ed. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Political_Institutions_Haber.pdf}{\emph{Political Institutions and Economic Growth in Latin America}}.\phantom{\textcite{Haber2000}}
           \item[$\circ$] Thomas Piketty. 2014.  \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Piketty_El_capital.pdf}{``Capital in the Twenty-First Century''}. Fondo de Cultura Econ\'omica. Ch.: ``Introducci\'on''.\phantom{\textcite{Piketty:2015aa}}
 				\end{itemize}
 
 
-			\item[14.] {\bf Tipos de Estados de Bienestar}.
+			\item[16.] {\bf Tipos de Estados de Bienestar}.
 				\begin{itemize}
           \item[$\circ$] Gosta Esping-Andersen. 1990. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Esping_Andersen.pdf}{``The Three Worlds of Welfare Capitalism''}. Polity Press. Ch.: 1 y 2.\phantom{\textcite{Esping-Andersen1990}}
         \end{itemize}
 
 
-			\item[15.] {\bf Estados de Bienestar: Or\'igenes}.
+			\item[17.] {\bf Estados de Bienestar: Or\'igenes}.
 				\begin{itemize}
 					\item[$\circ$] Kenneth Scheve and David Stasavage. 2015. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Taxing_The_Rich.pdf}{``Taxing the Rich: A History of Fiscal Fairness in the United States and Europe''}. Princeton University Press. Ch. 1.\phantom{\textcite{Scheve2016}}
 					\item[$\circ$] Alberto Alesina, Edward Glaeser y Bruce Sacerdote. 2001.\href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Alesina_et_al.pdf}{``Why Doesn't the United States Have a European-Style Welfare State?''} Brookings Papers on Economic Activity \#1933: 187---277.\phantom{\textcite{Alesina2001}}
 				\end{itemize}
 
 
-			\item[16.] {\bf Reformas Pol\'iticas de Bienestar en Latino Am\'erica}.
+			\item[18.] {\bf Reformas Pol\'iticas de Bienestar en Latino Am\'erica}.
 				\begin{itemize}
 					\item[$\circ$] Stephan Haggard y Robert Kaufman. 2008. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Kaufman_Welfare.pdf}{``Development, Democracy, and Welfare States''}. Princeton University Press. Ch. 2 y 5.\phantom{\textcite{Haggard2008a}}
         \end{itemize}
 
 
-			\item[17.] {\bf Transici\'on Democr\'atica y Liberalizaci\'on Econ\'omica en Latino Am\'erica (II)}.
+			\item[19.] {\bf Transici\'on Democr\'atica y Liberalizaci\'on Econ\'omica en Latino Am\'erica (II)}.
 				\begin{itemize}
 					\item[$\circ$] Hector Schamis. 1999. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Schamis_1999.pdf}{``Distributional Coalitions and the Politics of Economic Reform in Latin America''}. \emph{World Politics} 51(2): 236---268.\phantom{\textcite{Schamis1999}}
 					\item[$\circ$] Gustavo Flores-Mac\'ias. 2010.  \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Flores_Macias_2010.pdf}{``Statist vs. Pro-Market: Explaining Leftist Governments' Economic Policies in Latin America''}. \emph{Comparative Politics} 42(4): 413---433.\phantom{\textcite{Flores-Macias2010}}
 				\end{itemize}
 
 
-			\item[18.] {\bf Desigualdad en Latino Am\'erica}.
+			\item[20.] {\bf Desigualdad en Latino Am\'erica}.
 				\begin{itemize}
 					%\item[{\color{red}$\circ$}] Williamson, J. (2015). “Latin American Inequality: Colonial Origins, Commodity Booms, or a Missed 20th Century Leveling?” National Bureau of Economic Research, Working Paper 20915. TEXTO PEDIDO AL AUTOR; UNPUBLISHED
 					\item[$\circ$] Juan Ariel Bogliaccini. 2013. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Bogliaccini.pdf}{``Trade Liberalization, Deindustrialization, and Inequality''}. \emph{Latin American Research Review} 48(2): 79---105.\phantom{\textcite{Bogliaccini2013}}
 					\item[$\circ$] Jana Morgan and Nathan Kelly. 2013. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Morgan_Kelly.pdf}{``Market Inequality and Redistribution in Latin America and the Caribbean''}. \emph{The Journal of Politics} 75(3): 672---685.\phantom{\textcite{Morgan2013}}
 				\end{itemize}
+
+
+			\item[21.] {\bf Condiciones de Redistribuci\'on en Autocracias y Democracias}.
+				\begin{itemize}
+					\item[$\circ$] Michael Albertus. 2015. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Albertus_2013.pdf}{``Autocracy and Redistribution: The Politics of Land Reform}. Cambridge University Press. Ch. 1.\phantom{\textcite{Albertus2015}}
+					\item[$\circ$] Michael Dorsch and Paul Maarek. 2019. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Dorsch_2019.pdf}{``Democratization and the Conditional Dynamics of Income Distribution''}. \emph{American Political Science Review} 113(2): 385---404.\phantom{\textcite{Dorsch2019}}
+				\end{itemize}
+
 
 		\end{itemize}
 
