--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -404,7 +404,7 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 			
 			\item[3.] {\bf Formaci\'on del estado: El estado europeo a la luz de la sociololog\'ia del derecho}.
 				\begin{itemize} 
-					\item[$\circ$] Joseph Strayer. 1973. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Strayer.pdf}{\emph{On the Medieval Origins of the Modern State}}. Princeton University Press. Ch. 1.\phantom{\textcite{Strayer:2005uq}}
+					\item[$\circ$] Joseph Strayer. 1970. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Strayer.pdf}{\emph{On the Medieval Origins of the Modern State}}. Princeton University Press. Ch. 1.\phantom{\textcite{Strayer1970}}
 				\end{itemize}
 
 			\item[4.] {\bf Formaci\'on del Estado: Latinoam\'erica y Sudeste Asi\'atico}.
