--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -439,6 +439,12 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 					\item[$\circ$]  Florian Hollenbach, Erik Wibbels and Michael Ward. 2013. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Hollenbach_2013.pdf}{``State Building and the Geography of Governance: Evidence From Satellites.''} \emph{Working Paper}.\phantom{\textcite{Hollenbach2013}} 
 				\end{itemize}
 
+      %\item[] {\bf Gobernanza}.
+      %  \begin{itemize}
+      %    \item[$\circ$]  Soren Holmberg, Bo Rothstein and Naghmeh Nasiritousi. 2009. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Rothstein.pdf}{``Quality of Government: What You Get.''} \emph{Annual Review of Political Science}, 12(1): 135---161.\phantom{\textcite{Holmberg2009}} 
+      %    \item[$\circ$] Francis Fukuyama. 2013. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Fukuyama.pdf}{``What Is Governance?.''} \emph{Governance: An International Journal of Policy, Administration, and Institutions}, 26(3): 347---368.\phantom{\textcite{Fukuyama2013}} 
+      %  \end{itemize}
+
 
 			\item[9.] {\bf La Pol\'itica de la Capacidad Estatal}.
 				\begin{itemize}
