--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -414,7 +414,7 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 					\item[$\circ$] Dan Slater. 2008. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Slater.pdf}{``Can Leviathan be Democratic? Competitive Elections, Robust Mass Politics, and State Infrastructural Power.''} \emph{Studies in Comparative International Development}, 43(3-4): 252---272.\phantom{\textcite{Slater2008}}
 				\end{itemize}
 
-		\item[5.] {\bf Origen Institucional del Estado en Las Am\'ericas: ``\emph{Factor Endowments}'' o Instituciones?}
+		\item[5.] {\bf Origen Institucional del Estado en Las Am\'ericas: ``\emph{Factor Endowments}'' y \emph{Property Rights}}
 				\begin{itemize}
 					\item[$\circ$] Kenneth Sokoloff y Stanley Engerman. 2000. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Sokoloff_Engerman.pdf}{``Institutions, Factor Endowments, and Paths of Development in the New World''}. \emph{Journal of Economic Perspectives}, 14(3): 217---232.\phantom{\textcite{Sokoloff:2000ug}} 
 					\item[$\circ$] Daron Acemoglu, Simon Johnson y James Robinson. 2002. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Reversal_of_fortune.pdf}{``Reversal Fortune: Geography and Institutions in the Making of the Modern World Income Distribution''}. \emph{The Quarterly Journal of Economics}, 117(4): 1231---1294.\phantom{\textcite{Acemoglu:2002uh}} 
