--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -429,7 +429,7 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 
 		\item[7.] {\bf El Impacto de las Instituciones Coloniales en el Desarrollo Pol\'itico-Social}.
 				\begin{itemize}
-					\item[$\circ$]  Marcus Kurtz. 2013. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Kurtz_2013.pdf}{\emph{Latin American State-Building in Comparative Perspective: Social Foundations of Institutional Order}}. Cambridge University Press. Chs. 1---2.\phantom{\textcite{Kurtz:2013aa}}
+					\item[$\circ$]  Marcus Kurtz. 2013. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Kurtz_2013.pdf}{\emph{Latin American State-Building in Comparative Perspective: Social Foundations of Institutional Order}}. Cambridge University Press. Ch. 2.\phantom{\textcite{Kurtz:2013aa}}
 					\item[$\circ$]  Hillel Soifer. 2015. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Soifer.pdf}{\emph{State Building in Latin America}}. Cambridge University Press. Ch. 2.\phantom{\textcite{Soifer2015a}}
 				\end{itemize}
 
