--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -427,13 +427,13 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 					\item[$\circ$]  James Mahoney. 2010. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Mahoney_Colonialism_PostColonialsm.pdf}{\emph{Colonialism and Postcolonial Development: Spanish America in Comparative Perspective}}. Cambridge University Press. Ch. 1.\phantom{\textcite{Mahoney:2010aa}} 
 				\end{itemize}
 
-		\item[7.] {\bf Independencia e Instituciones de ``State-building'' Post-Coloniales}.
+		\item[7.] {\bf Independencia e Instituciones Post-Coloniales de ``State-building''}.
 				\begin{itemize}
 					\item[$\circ$]  Marcus Kurtz. 2013. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Kurtz_2013.pdf}{\emph{Latin American State-Building in Comparative Perspective: Social Foundations of Institutional Order}}. Cambridge University Press. Ch. 2.\phantom{\textcite{Kurtz:2013aa}}
 					\item[$\circ$]  Hillel Soifer. 2015. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Soifer.pdf}{\emph{State Building in Latin America}}. Cambridge University Press. Ch. 2.\phantom{\textcite{Soifer2015a}}
 				\end{itemize}
 
-			\item[8.] {\bf Capacidad Estatal}.
+			\item[8.] {\bf Capacidad Estatal: El poder ``infraestructural'' del estado}.
 				\begin{itemize}
 					\item[$\circ$] Michael Mann. 2008. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Mann_2008.pdf}{``Infrastructural Power Revisited.''} \emph{Studies in Comparative International Development}, 43(3-4): 355---365.\phantom{\textcite{Mann2008a}} 
 					\item[$\circ$]  Florian Hollenbach, Erik Wibbels and Michael Ward. 2013. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Hollenbach_2013.pdf}{``State Building and the Geography of Governance: Evidence From Satellites.''} \emph{Working Paper}.\phantom{\textcite{Hollenbach2013}} 
@@ -446,7 +446,7 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
       %  \end{itemize}
 
 
-			\item[9.] {\bf La Pol\'itica de la Capacidad Estatal}.
+			\item[9.] {\bf La \emph{Pol\'itica} de la Capacidad Estatal}.
 				\begin{itemize}
 					\item[$\circ$] Daniel Brinks, Steven Levitsky and Mar\'ia Victoria Murillo. 2020. ``The Political Origins of Institutional Weakness,'' en Daniel Brinks, Steven Levitsky and Mar\'ia Victoria Murillo, Eds. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Brinks_Levitsky_Murillo.pdf}{\emph{The Politics of Institutional Weakness in Latin America}}. Cambridge University Press, Ch. 1.\phantom{\textcite{Brinks2020}}
 					\item[$\circ$] Matthew Amengual and Eduardo Dargent. 2020. ``The Social Determinants of Enforcement: Integrating Politics with Limited State Capacity,'' en Daniel Brinks, Steven Levitsky and Mar\'ia Victoria Murillo, Eds. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Brinks_Levitsky_Murillo.pdf}{\emph{The Politics of Institutional Weakness in Latin America}}. Cambridge University Press, Ch. 7.\phantom{\textcite{Brinks2020}}
