--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -435,7 +435,8 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 
 			\item[8.] {\bf Capacidad Estatal: El poder ``infraestructural'' del estado}.
 				\begin{itemize}
-					\item[$\circ$] Michael Mann. 2008. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Mann_2008.pdf}{``Infrastructural Power Revisited.''} \emph{Studies in Comparative International Development}, 43(3-4): 355---365.\phantom{\textcite{Mann2008a}} 
+          %\item[$\circ$] Michael Mann. 1984 \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Mann_1984.pdf}{``The Autonomous Power of the State: Its Origins, Mechanisms and Results.''} \emph{European Journal of Sociology}, 25(2): 185---213.\phantom{\textcite{Mann1984}} % dejar este
+					\item[$\circ$] Michael Mann. 2008. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Mann_2008.pdf}{``Infrastructural Power Revisited.''} \emph{Studies in Comparative International Development}, 43(3-4): 355---365.\phantom{\textcite{Mann2008a}} % sacar este
 					\item[$\circ$]  Florian Hollenbach, Erik Wibbels and Michael Ward. 2013. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Hollenbach_2013.pdf}{``State Building and the Geography of Governance: Evidence From Satellites.''} \emph{Working Paper}.\phantom{\textcite{Hollenbach2013}} 
 				\end{itemize}
 
