--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -151,7 +151,7 @@
 % Alternatively, print name centered and bold:
 \centerline{\huge \bf \name}
 
-\epigraph{\emph{``Man is a political animal. A man who lives alone is either a Beast or a God''}}{Aristotle, Politics}
+\epigraph{\emph{``We have no examples of stateless societies''}}{\textcite[195]{Mann1984}}
 
 
 \vspace{0.25in}
