adds Reinsch1909 reading

--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -425,6 +425,12 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 				\begin{itemize}
 					\item[$\circ$] Stephen Haber. 1991. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Haber.pdf}{``Industrial Concentration and the Capital Markets: A Comparative Study of Brazil, Mexico, and the United States, 1830–1930''}. \emph{The Journal of Economic History}, 51(3): 559---580.\phantom{\textcite{Haber1991}} 
 					\item[$\circ$]  James Mahoney. 2010. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Mahoney_Colonialism_PostColonialsm.pdf}{\emph{Colonialism and Postcolonial Development: Spanish America in Comparative Perspective}}. Cambridge University Press. Ch. 1.\phantom{\textcite{Mahoney:2010aa}} 
+
+					\item[{\Pointinghand}] {\bf El caso Chileno (\emph{paper} sugerido):}
+									\begin{enumerate}
+										\item Paul Reinsch. 1909. \href{https://github.com/hbahamonde/Ciencia_Politica_I/raw/master/Readings/Reinsch_1909.pdf}{``Parliamentary Government in Chile.''} \emph{American Political Science Review}, 3(4): 507---538.\phantom{\textcite{Reinsch1909}}
+									\end{enumerate}
+
 				\end{itemize}
 
 		\item[7.] {\bf Independencia e Instituciones Post-Coloniales de ``State-building''}.
